<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--<string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>-->
	<!--Resources res = getResources();-->
	<!--String text = String.format(res.getString(R.string.welcome_messages),username, mailCount);-->



	<string name="whatsnew">
        # $Rev: 127 $\n
        # Rev: 127 \n
        Maximised ISO for all devices in Experimental\n
        Turned camera "denoise-on" in Experimental\n
        #Rev: 125 \n
        - Set screen res to native for hardware.
        #Rev: 122\n
        -Upgraded to OpenCV 2.4.6 Lib
		-Swapped out V for S in adjust threshold.\n
		-Added description to debug display\n
		#Rev: 120 \n
		-Chk is detected circle is hollow\n
        ---(reduces false positives)\n
		#Rev: 118\n
		-Cleanup\n
		#Rev: 114 \n
		-Added this What\'s new screen\n
		-Default Mode:\n
		--Set Camera to
		---WHITE_BALANCE_AUTO\n
        ---SCENE_MODE_AUTO\n
        ---WHITE_BALANCE_AUTO\n
        ---ISO_AUTO\n
		- Experimental mode\n
        --Set Camera to
        ---FOCUS_MODE_INFINITY\n
        ---ISO_HJR or Highest iso\n
		- Added debug display Verbosity in Settings\n
	</string>


	<string name="android:versionName">Speed Sign Finder</string>


<!--Shared Preferences -->
<!--Keys-->
	<string name="settings_soundKey">bMute</string>
	<string name="settings_displayKey">doDebug</string>
	<string name="settings_alertOnGreenLightEnabledKey">alertOnGreenLightEnabled</string>
	<string name="settings_userEmailKey">userEmail</string>
	<string name="settings_userPrivacyKey">userPrivacy</string>
	<string name="settings_debugVerbosityKey">debugVerbosity</string>
	<string name="settings_VersionKey">settings_VersionKey</string>
	<string name="settings_ttsSignFoundKey">ttsSignFoundKey</string>
	<string name="settings_ttsSaluteKey">ttsSaluteKey</string>
	<string name="settings_bExperimentalKey">bExperimental</string>

<!--titles and Summarys-->
    <string name="settings_Settings_title">Settings</string>
    <string name="settings_Settings_Summery">Choose your sound and display settings</string>

    <string name="settings_Features_title">Features</string>
    <string name="settings_Features_Summary">Choose enable or disable features</string>

    <string name="settings_Options_title">Options</string>
    <string name="settings_Options_Summary">Customise how the application interacts</string>

    <string name="settings_Reference_title">Reference</string>
    <string name="settings_Reference_Summary">Choose your Reference</string>

    <string name="settings_aboutTitle">About</string>
    <string name="settings_aboutSummary">Find out more about the developers</string>

    <string name="settings_userPrivacyTitle">Privacy Statment</string>
    <string name="settings_userPrivacySummary">We respect your right to anonymity</string>

    <string name="settings_debugVerbosityTitle">Debug Display</string>
    <string name="settings_debugVerbositySummary">Select how much debug detailed you want to see.</string>

    <string name="settings_displayTitle">Display</string>
    <string name="settings_displaySummary">Do you want to see the debug display</string>

    <string name="settings_soundTitle">Sound</string>
    <string name="settings_soundSummary">Do you want to hear when a sign is detected? \n(does not turn off sound on Green Light Detection)</string>

    <string name="settings_alertOnGreenLightEnabledTitle">Enable Alert On Green Light</string>
    <string name="settings_alertOnGreenLightEnabledSummary">Touch a red traffic light and you will be notified when it changes</string>

    <string name="settings_userEmailTitle">Optional BCC Email address</string>
    <string name="settings_userEmailSummary">Add your email address to have yourself BCC on all data sent to Server</string>

    <string name="settings_userVersionTitle">Application Version</string>
    <string name="settings_userVersionSummary">This is the version number</string>

    <string name="settings_user_ttsSignFoundTitle">Sign Detected Alert</string>
    <string name="settings_user_ttsSignFoundSummary">This is what is announced when a sign is detected</string>

    <string name="settings_user_ttsSaluteTitle">Launch Application Alert</string>
    <string name="settings_user_ttsSaluteSummary">This is what is announced when the application is launched\nLeave blank to disable.</string>

    <string name="settings_FeedbackTitle">Send Anonymous Feedback</string>
    <string name="settings_FeedbackSummary">This allows you to send feedback through the Google Play Store, none of your personal details are sent.</string>

    <string name="settings_bExperimentalTitle">Experimental.</string>
    <string name="settings_bExperimentalSummary">Enable experimental camera settings,turn off is performance reduces.</string>

    <string name="settings_aboutAltruisticEngineersTitle">Altruistic Engineers Community</string>
    <string name="settings_aboutAltruisticEngineersSummary">Community is about using the power of millions of skilled people with a little spare time advancing solutions that can make the world better for it being here.</string>

    <string name="settings_aboutAltruisticTranslatorsTitle">Altruistic Translators Community</string>
    <string name="settings_aboutAltruisticTranslatorsSummary">using the power of millions of skilled people with a little spare time advancing solutions that can make the world better for it being here.</string>




    <string name="settings_aboutAltruisticEngineersUrl">https://plus.google.com/u/0/communities/105872240007781184868</string>
	<string name="settings_aboutAltruisticTranslatorsUrl">https://plus.google.com/u/0/communities/105559111385953530486</string>

	<string name="emailAddress">speedsignfinder@anthonykeane.com</string>
	<string name="emailSubject">Speed Sign Finder&#160;</string>

	<string name="LatLongFile.txt">LatLongFile</string>
	<string name="LayLongStorage">LayLongStorage</string>
	<string name="wwwHead"><![CDATA[<!DOCTYPE html><html><head><title></title></head><body>]]> </string>
	<string name="wwwMiddle1"><![CDATA[<img src="http://maps.googleapis.com/maps/api/streetview?size=480x320&fov=90&pitch=0&sensor=false&location=]]></string>
	<string name="wwwMiddle2"><![CDATA[&heading=]]></string>
	<string name="wwwMiddle3"><![CDATA[0 alt=\"]]></string>
	<string name="wwwMiddle4"><![CDATA[\"></a>]]></string>
	<string name="wwwTail"><![CDATA[</body></html>]]></string>
	<string name="settings_aboutHtml"><![CDATA[
						<html><head><title>ABOUT</title></head>
							<body><br><br><a href="https://plus.google.com/communities/105872240007781184868" >Altruistic Engineers</a><br>
								<br>
								<a href="https://plus.google.com/u/0/communities/105872240007781184868/stream/fb587b8b-f6f0-463a-8ce0-d3c524bb5431" >--------- Speed Sign Finder</a>
								<br><br></body></html>
						]]></string>
    <string name="CrLf">\n\r</string>




<!--MENU-->
	<string name="sendFeedback">Send Feedback</string>


    <string name="bMenu">TouchMe</string>

	<string name="app_name">Speed Sign Finder</string>
	<string name="fancy">Fancy Display</string>
	<string name="thres">Threshold</string>
	<string name="debug">Debug</string>
	<string name="erode">Erode</string>
	<string name="dilate">Dilate x2</string>
	<string name="email">Email Data</string>
	<string name="popup">Adjust Threshold Level</string>
	<string name="misc">Misc</string>
	<string name="mute_vol">Mute</string>
	<string name="unmute_vol">Unmute</string>

<!--MISC    -->
	<string name="disabled">\u0020Disabled</string>
	<string name="enabled">&#160;Enabled</string>
	<string name="disable">Disable&#160;</string>
	<string name="enable">Enable&#160;</string>
	<string name="lightGreen">Detection</string>
	<string name="bShowVersion">Show Version</string>
	<string name="ttsSalute">Ok, here we go!</string>
	<string name="ttslightGreen">I think the traffic is about to move!</string>
	<string name="ttsSignFound">Detected!</string>

</resources>





    <!--Build HTML link to StreetView-->
    <!--<!DOCTYPE html><html><head><title></title><img src="http://maps.googleapis.com/maps/api/streetview?size=480x320&fov=90&pitch=0&sensor=false&location=-33.69816467,150.9637255125&heading=200" alt="GUIDGUIDGUIDGUID"></a></head><body>-->
    <!--_________________________________________|__________________________________________________________________________________________________________|           |_|              |_______|  |_____|                |_____|___________|-->
    <!--                 ^                                                                      ^                                                                 ^      ^       ^           ^         ^           ^          ^        ^      -->
    <!--              wwwHead                                                              wwwMiddle1                                                                    ,               wwwMiddle2 wwwMiddle3            wwwMiddle4 wwwTail  -->
    <!--                                                                                                                                                         Lat            Lon                               GUID                        -->

    <!--</body></html>-->
